# vulkan-rs

./: Cargo.toml  README.md
crates/vulkan/: Cargo.toml  README.md  build.rs
crates/vulkan-alloc/: Cargo.toml  README.md
crates/vulkan-alloc/src/: lib.rs
crates/vulkan-codegen/: Cargo.toml  README.md
crates/vulkan-codegen/src/: main.rs
crates/vulkan-codegen/tests/: generate_check.rs
crates/vulkan-registry/: Cargo.toml  README.md
crates/vulkan-registry/src/: lib.rs
crates/vulkan/src/: lib.rs
crates/vulkan/src/vk/: mod.rs
crates/vulkan/tests/: api_shapes.rs  lifetime.rs
crates/vulkan/tests/ui/: lifetime-temporary-slice.rs  lifetime-temporary-slice.stderr  pnext-and-shader-code-live.rs  pnext-temporary.rs  pnext-temporary.stderr  shader-code-temporary.rs  shader-code-temporary.stderr
examples/compute-buffer/: Cargo.toml  build.rs
examples/compute-buffer/src/: main.rs
examples/compute-buffer/src/shaders/: compute.slang
examples/descriptor-heap-14/: Cargo.toml  build.rs
examples/descriptor-heap-14/src/: main.rs
examples/descriptor-heap-14/src/shaders/: graphics.slang
examples/headless-triangle/: Cargo.toml
examples/headless-triangle/src/: main.rs
examples/headless-triangle/src/shaders/: triangle.slang
examples/mesh-shader/: Cargo.toml  build.rs
examples/mesh-shader/src/: main.rs
examples/mesh-shader/src/shaders/: mesh.slang
examples/ray-tracing-pipeline/: Cargo.toml  build.rs
examples/ray-tracing-pipeline/src/: main.rs
examples/ray-tracing-pipeline/src/shaders/: closesthit.slang  miss.slang  raygen.slang
examples/wayland-dynamic-rendering/: Cargo.toml
examples/wayland-dynamic-rendering/src/: main.rs
examples/wayland-triangle/: Cargo.toml  build.rs
examples/wayland-triangle/src/: main.rs
tools/: generate-vulkan
