[package]
name = "vulkan"
version = "0.2.0+vulkan-sdk-1.4.350.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["alloc"]
alloc = []
std = ["alloc", "dep:libloading"]
linked = []
android = []
beta = []
directfb = []
fuchsia = []
ggp = []
ios = []
macos = []
metal = []
ohos = []
rdma = []
screen = []
sci = []
ubm = []
vi = []
wayland = []
win32 = []
xcb = []
xlib = []
xlib-xrandr = ["xlib"]

[dev-dependencies]
trybuild = "1"

[dependencies]
libloading = { version = "0.8", optional = true }
