[package]
name = "vulkan-descriptor-heap-14"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[workspace]

[dependencies]
anyhow = "1"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.33.0"
vulkan = { path = "../../crates/vulkan", features = ["std"] }
vulkan-alloc = { path = "../../crates/vulkan-alloc" }
